<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="search_for_cheap_flights">Поиск дешевых авиабилетов</string>
    <string name="from_search_field_hint">Откуда - Москва</string>
    <string name="to_search_field_hint">Куда - Турция</string>
    <string name="search_tickets">Поиск билетов</string>
    <string name="offers_list_title">Музыкально отлететь</string>

    <string name="hint_hard_route">Сложный маршрут</string>
    <string name="hint_anywhere">Куда угодно</string>
    <string name="hint_weekends">Выходные</string>
    <string name="hint_hot_tickets">Горячие билеты</string>
    <string name="popular_route">Популярное направление</string>

    <string name="mock_recommendation_1">Стамбул</string>
    <string name="mock_recommendation_2">Сочи</string>
    <string name="mock_recommendation_3">Пхукет</string>

    <string name="configuration_back">обратно</string>
    <string name="configuration_person_mock">1,эконом</string>
    <string name="configuration_filter">фильтры</string>
    <string name="ticket_recommendation_title">Прямые рельсы</string>
    <string name="view_all_tickets">Посмотреть все билеты</string>
    <string name="subscribe_on_price">Подписка на цену</string>

    <string name="template_range">%1$s-%2$s</string>
    <string name="template_details">%1$s, %2$s</string>
    <plurals name="person">
        <item quantity="zero">%1$d пассажиров</item>
        <item quantity="one">%1$d пассажир</item>
        <item quantity="two">%1$d пассажира</item>
        <item quantity="few">%1$d пассажиров</item>
        <item quantity="many">%1$d пассажиров</item>
        <item quantity="other">%1$d пассажиров</item>
    </plurals>

    <string name="template_no_transfer_travel_time">%1$sч в пути/Без пересадок</string>
    <string name="template_travel_time">%1$sч в пути</string>
    <string name="template_airport_info">%1$s \t\t%2$s</string>
    <string name="price_graph">График цен</string>
    <string name="floating_filter">Фильтр</string>
</resources>