<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/default_card_radius"
    app:cardBackgroundColor="@color/gray_3"
    app:cardElevation="16dp"
    app:cardUseCompatPadding="true">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/gray_4"
        app:cardCornerRadius="@dimen/default_card_radius"
        app:cardElevation="16dp"
        app:contentPadding="12dp"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/searchButton"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_search"
                android:contentDescription="@string/search_tickets"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/fromSearchField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:paddingVertical="8dp"
                android:textAppearance="@style/TicketFound.TextAppearance.ButtonText1"
                android:textColorHint="@color/gray_6"
                android:background="@android:color/transparent"
                android:hint="@string/from_search_field_hint"
                android:maxLines="1"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:textColor="@color/white"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/searchButton" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="20dp"
                app:layout_constraintStart_toEndOf="@id/searchButton"
                app:layout_constraintTop_toBottomOf="@id/fromSearchField"
                app:layout_constraintEnd_toEndOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/toSearchField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:paddingVertical="8dp"
                android:textColorHint="@color/gray_6"
                android:textColor="@color/white"
                android:textAppearance="@style/TicketFound.TextAppearance.ButtonText1"
                android:background="@android:color/transparent"
                android:hint="@string/to_search_field_hint"
                android:maxLines="1"
                android:inputType="text"
                android:imeOptions="actionSearch"
                app:layout_constraintTop_toBottomOf="@id/fromSearchField"
                app:layout_constraintStart_toEndOf="@id/searchButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</com.google.android.material.card.MaterialCardView>